--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {},
   "devDependencies": {
     "del": "^5.1.0",
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-beautify": "^3.0.0"
   }
 }
