--- a/package.json
+++ b/package.json
@@ -23,23 +23,26 @@
   "bugs": {
     "url": "https://github.com/MilenaKiseleva/milenakiseleva.github.io/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "gulp-imagemin": "^7.1.0",
+    "imagemin-webp": "^6.0.0"
+  },
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
-    "autoprefixer": "^9.8.0",
-    "cssnano": "^4.1.10",
-    "del": "^5.1.0",
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.3",
+    "autoprefixer": "^10.4.12",
+    "cssnano": "^5.1.13",
+    "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-beautify": "^3.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-htmlhint": "^3.0.1",
+    "gulp-htmlhint": "^4.0.2",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-postcss": "^8.0.0",
-    "gulp-posthtml": "^3.0.4",
+    "gulp-postcss": "^9.0.1",
+    "gulp-posthtml": "^3.0.5",
     "gulp-uglify": "^3.0.2",
-    "postcss-unprefix": "^2.1.4",
+    "postcss-unprefix": "^1.2.0",
     "posthtml-outlinks": "^1.0.0"
   },
   "browserslist": [
